# robot-wars

./: .gitignore  LICENSE  MANIFEST.in  README.md  arena.py  basic.json  bullet.py  draw_util.py  entity.py  generate_circles.py  generate_stress_test.py  geometry_util.py  init.py  init_old.py  map.py  pyproject.toml  quadtree.py  robot.py  setup.cfg  stress_test.json  wall.py
.github/workflows/: lint.yml
docs/: Controller.md  ControllerAction.md  ControllerState.md  background.md  examples.md  getting_started.md  scenario.md  util.md
engine/: __init__.py  arena.py  bullet.py  control.py  controllers.py  draw_util.py  entity.py  map.py  pathfinding.py  pathfinding_new.py  quadtree.py  robot.py  robotlist.py  wall.py
engine/entity/: __init__.py  bullet.py  coin.py  entity.py  robot.py  wall.py
engine/maps/: basic.json  circles.json  circles_large.json  lock.json  maze.json  stress_test.json
engine/scenario/: __init__.py  battleroyale.py  onevsone.py  tournament.py
engine/util/: __init__.py  draw.py  geometry.py
src/tank_wars_iit/: __init__.py
src/tank_wars_iit/_engine/: __init__.py  arena.py  control.py  pathfinding.py  robotlist.py
src/tank_wars_iit/_engine/entity/: __init__.py  bullet.py  coin.py  entity.py  robot.py  wall.py
src/tank_wars_iit/examples/: __init__.py  controllers.py
src/tank_wars_iit/scenario/: __init__.py  battleroyale.py  onevsone.py  tournament.py
src/tank_wars_iit/util/: __init__.py
tests/: demo.py
tools/: generate_circles.py  generate_circles_large.py  generate_lock.py  generate_maze.py  generate_stress_test.py
(+6 files in other folders)
